# fb-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build-static.yml  release.yml
src/: args.rs  auth.rs  context.rs  highlight.rs  lib.rs  main.rs  meta_commands.rs  query.rs  repl_helper.rs  show.rs  sql.pest  sql_parser.rs  table_renderer.rs  transport.rs  tui_msg.rs  utils.rs  viewer.rs
src/completion/: candidates.rs  context_analyzer.rs  context_detector.rs  fuzzy_completer.rs  mod.rs  priority_scorer.rs  schema_cache.rs  usage_tracker.rs
src/docs/: completion.md  output_pipeline.md  table_rendering.md  tui.md
src/tui/: completion_popup.rs  fuzzy_popup.rs  history.rs  history_search.rs  layout.rs  mod.rs  output_pane.rs  signature_hint.rs
tests/: cli.rs
