[package]
name = "fb"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "12.0.0", features = ["case_insensitive_history_search"] }
gumdrop = { version = "0.8.1", features = ["default_expr"] }
reqwest = { version = "0.12", features = ["json", "http2"] }
openssl = { version = "*", features = ["vendored"] } 
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
dirs = "5.0"
regex = "1.10"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
urlencoding = "2.1"
pest = "2.7"
pest_derive = "2.7"
