[package]
name = "fb"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fb"
crate-type = ["staticlib", "rlib"]

[dependencies]
ratatui = "0.29"
tui-textarea = "0.7"
crossterm = "0.28"
gumdrop = { version = "0.8.1", features = ["default_expr"] }
reqwest = { version = "0.12", features = ["json", "http2"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
openssl = { version = "*", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
dirs = "5.0"
regex = "1.10"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
urlencoding = "2.1"
pest = "2.7"
pest_derive = "2.7"
terminal_size = "0.3"
csvlens = "0.14"
nucleo-matcher = "0.3.1"
sqlformat = "0.5.0"
